# app/couples/router/photo.go
@@ -8,7 +8,6 @@ import (
 func PhotoRouter(v1 *gin.RouterGroup) {
 	photo := &apis.Photo{}
 	{
-		v1.POST("/photo", photo.AddPhoto)            //照片上传
-		v1.POST("/photo-album", photo.AddPhotoAlbum) //相册上传
+		v1.POST("/photo", photo.AddPhoto) //照片上传
 	}
 }
